--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ header {
     right: 0;
     height: 50px;
     line-height: 50px;
-    background-color: #eee;
+    background-color: blue;
 }
 
 header * {
@@ -66,7 +66,7 @@ section h3 {
 
 header a {
     text-decoration: none;
-    color: black;
+    color: yellow;
 }
 
 /* Add everything below here */
